# src/controllers/index.js
@@ -2,5 +2,7 @@ export { default as registerController } from './auth/registerController'
 export { default as loginController } from './auth/loginController'
 export { default as refreshController } from './auth/refreshController'
 export { default as userController } from './auth/userController'
+
 export { default as categoryController } from './portfolio/categoryController'
-export { default as certificateCategController} from './achievents/certificateCategController'
+export { default as workController } from './portfolio/workController'
+export { default as certificateCategController } from './achievents/certificateCategController'
