# src/models/index.js
@@ -1,7 +1,7 @@
 export { default as User } from './auth/user'
 export { default as RefreshToken } from './auth/refreshToken'
-export { default as PortfolioCateg } from './portfolio/category'
+export { default as PortfolioCateg } from './work/category'
 
 export { default as CertificateCateg } from './certificate/category'
 
-export { default as Portfolio } from './portfolio/work'
+export { default as Portfolio } from './work/portfolio'
